rustdocs/errors/rust-bitcoin-internals-src-array_vec.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/internals/src/array_vec.rs:13:9
   |
13 |     use core::mem::MaybeUninit;
   |         ^^^^
   |         |
   |         you might be missing crate `core`
   |         help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/internals/src/array_vec.rs:5:5
  |
5 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
